the error of exec is rectified